# CMPDA

./: .gitattributes  .readthedocs.yml  .travis.yml  CNN_tutorial.ipynb  Colab_interface.ipynb  Doc&CITutorial.txt  MANIFEST.in  README.md  README.rst  requirements.txt  setup.cfg  setup.py  setup_old.py  tutorial_basic.txt
Docs/: Makefile  api.rst  conf.py  index.rst  make.bat
First_assignment/: First_assignment.py  First_assignment_optional.py  assignment_1.py  workfile.txt
Fortran_algorithms/: Library_Der.f90~  Library_Zero.f90  Piano_Tasse.f90~  sources.txt
Fortran_computation/: README.rst  library.f90  sources.txt
Hopfield_model/: sources.txt
Machine_Learning/: ML_assignments.ipynb  README.rst  sources.txt
Manim/: README.rst  example.py
Manim_and_LaTex/: README.rst
NumAn_UniSa/: Library_Interp.f90  Library_Ode.f90  newlibrary.f90
Numerical_methods/: README.rst  sources.txt
Parallel_computing/: README.rst  sources.txt
Python_SciPy/: README.rst  sources.txt
Python_practice/: Classes.py  Interp_fortran.py  Plot_&_Numpy_1.py  Processes.py  Timed_wrap.py  Tutorial.py  Tutorial2.py  Tutorial3.py  plot.py  smartsquare.py
Quant_computing/: sources.txt
Quantum_computing/: QCircuite.py  README.rst  sources.txt
ROOT_C++/: README.rst  sources.txt
ROOT_and_C++/: README.rst
Shortcuts/: tutorial_doc&CI.txt  tutorial_python.txt
Sophia/: sophia.py
Tensor_network/: README.rst
Tests/: test_assignment2.py  test_core.py  test_smartsquare.py  test_sophia.py
cmpda/: README.rst  __init__.py  __version__.py  flibrary.f90  map_henon.f90  readme.md  (+2 more)
(+289 files in other folders)
