[metadata]
name = CMPDA
version = attr: cmpda.mylib.__version__
author = Dario Cafasso
author_email = cafasso.dario@gmail.com
description = Package of computing methods
platforms = Linux
classifiers =
  License :: OSI Approved :: GPL v3.0
  Operating System :: Linux
  Programming Language :: Python :: 3
  Programming Language :: C++
  Programming Language :: Fortran
  Intended Audience :: Science/Research
  Topic :: Scientific computation
  Development Status :: Beta
license = GPL v3.0
license_files = LICENSE
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
zip_safe = False
python_requires = >= 3.7
include_package_data = True

[options.entry_points]
console_scripts =
  darkYolo = cmpda.mylib.darknetyolo:cli
  hopfield = Python_SciPy.Hopfield_model.hopfield:cli

[versioneer]
VCS = git
style = pep440
versionfile_source = cmpda/mylib/_version.py
versionfile_build = cmpda/mylib/_version.py
tag_prefix =
parentdir_prefix = cmpda-
